frontend/test/should_fail/iteration.grg
rule rconst
{
	modify {
	---
		exec(rconst[3.0:5.0]);
	}
}
